margin bottom to stop hiding contact text on small screens

--- a/src/routes/mediaqueries.css
+++ b/src/routes/mediaqueries.css
@@ -108,9 +108,15 @@
         margin: 0;
     }
 
+
     .contact-info-container p,
     .nav-links li a {
         font-size: 1rem;
+    }
+
+    .experience-details-container {
+        margin-bottom: 2.5rem;
+
     }
 
     .experience-sub-title {
